completed magazine signup, made navigation fixed

--- a/blog.html
+++ b/blog.html
@@ -76,6 +76,21 @@
 
             <button>Read</button>
         </div>
+
+        <section class="magazine">
+            <h3>Sign up for our magazine!</h2>
+                <div class="magazine-form">
+                    <form action="#">
+                        <input type="text" placeholder="Email">
+                    </form>
+
+                    <button>Sign Up</button>
+                </div>
+        </section>
+
+        <footer>
+            <p>Copyright SpaceWalkers 2018</p>
+        </footer>
     </div>
 
 
